test/files/neg/t5182.scala
class test {
  @java.lang.Deprecated(qwe = "wer") def ok(q:Int) = 1
  @java.lang.Deprecated("wer") def whereAmI(q:Int) = 1
  @java.lang.Deprecated() def bippy(q:Int) = 1
}
